--- a/pc/.env.sample
+++ b/pc/.env.sample
@@ -3,9 +3,9 @@ debug = false
 trace = false
 
 [database]
-hostname = 127.0.0.1
+hostname = localhost
 database = ponyexam
 username = root
-password = root
+password = 123456
 hostport = 3306
 prefix = po_
